# sentinel_dbg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/console/: main.cpp
cmake/: CompilerWarnings.cmake
include/sentinel/: application.hpp  logger.hpp
include/sentinel_dbg/app/: app_context.hpp  console_frontend.hpp
include/sentinel_dbg/core/: command_router.hpp  debug_session.hpp  target.hpp
scripts/: build.bat  build.sh
src/: application.cpp  logger.cpp
src/app/: app_context.cpp  console_frontend.cpp
src/core/: command_router.cpp  debug_session.cpp  target.cpp
